--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header><h1>Portfolio</h1></header>
     <main>
         <section>Education: Hartmann, SRM</section>
-        <section>CGPA: 9.86, 10</section>
+        <section>CGPA: 9.86, 10, 10</section>
         <hr>
         <article><h1>My Story</h1><br><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis ipsa vitae atque dicta excepturi ipsum earum, odit veniam voluptates tenetur amet, quo neque? Soluta quis velit molestias enim voluptates dolor.</p></article>
     </main>
